// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Search component tests displays loading indicator 1`] = `
<div
  data-testid="loading-text"
>
  Loading...
</div>
`;

exports[`Search component tests renders correctly 1`] = `
<div
  className="wrapper"
>
  <div
    className="search"
  >
    <input
      data-testid="search-input"
      onChange={[Function]}
      value=""
    />
    <button
      data-testid="search-button"
      id="searchButton"
      onClick={[Function]}
    >
      Search
    </button>
    <button
      data-testid="error-input"
      id="errorButton"
      onClick={[Function]}
    >
      Throw Error
    </button>
    <div
      className="requestSize"
    >
      <input
        onChange={[Function]}
        value="10"
      />
      <button
        onClick={[Function]}
      >
        Items shown per page
      </button>
    </div>
  </div>
  <div
    className="result"
  >
    <div
      className="fullResult"
      onClick={[Function]}
    >
      <div
        data-testid="loading-text"
      >
        Loading...
      </div>
    </div>
  </div>
</div>
`;

exports[`Search component tests should allow entering a search term: people 1`] = `
<div>
  <div
    class="wrapper"
  >
    <div
      class="search"
    >
      <input
        data-testid="search-input"
        value=""
      />
      <button
        data-testid="search-button"
        id="searchButton"
      >
        Search
      </button>
      <button
        data-testid="error-input"
        id="errorButton"
      >
        Throw Error
      </button>
      <div
        class="requestSize"
      >
        <input
          value="10"
        />
        <button>
          Items shown per page
        </button>
      </div>
    </div>
    <div
      class="result"
    >
      <div
        class="fullResult"
      >
        <div
          data-testid="loading-text"
        >
          Loading...
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Search component tests should render expanded details 1`] = `
<div>
  <div
    class="wrapper"
  >
    <div
      class="search"
    >
      <input
        data-testid="search-input"
        value=""
      />
      <button
        data-testid="search-button"
        id="searchButton"
      >
        Search
      </button>
      <button
        data-testid="error-input"
        id="errorButton"
      >
        Throw Error
      </button>
      <div
        class="requestSize"
      >
        <input
          value="10"
        />
        <button>
          Items shown per page
        </button>
      </div>
    </div>
    <div
      class="result"
    >
      <div
        class="fullResult"
      >
        <div
          data-testid="loading-text"
        >
          Loading...
        </div>
      </div>
    </div>
  </div>
</div>
`;
